inverted the vertical centering to fix the ie scrollbar bug

--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -76,12 +76,23 @@
   }
 }
 
+.verticalCenterWithUnknownHeight(){
+  /*
+  using top and inverting with transform causes a bug on IE,
+  where the scrolling area is considered bigger than it really is,
+  hence why bottom was used instead
+  ref: http://stackoverflow.com/a/27990348/689223
+  ref: https://css-tricks.com/centering-css-complete-guide/#vertical-block-unknown
+  */
+  bottom: 50%;
+  transform: translateY(50%);
+  position: absolute;
+}
+
 .content {
   color: #9b9b9b;
   font-size: 18px;
-  position: absolute;
   width: 100%;
   max-height: 100%;
-  top: 50%;
-  transform: translateY(-50%);
+  .verticalCenterWithUnknownHeight()
 }
